<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="356dp"
            android:layout_height="478dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblNewPlayerInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_player_msg"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="@android:color/holo_orange_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblUsername"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblFirstname"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/txtFirstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblLastname"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/txtLastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblEmail"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="handleClick"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>