<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SDPCryptogramActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutUserNotSelected"
            android:layout_width="356dp"
            android:layout_height="478dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/btnPlay"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:onClick="handleClickPlayButton"
                    android:text="@string/play"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutUserSelected"
            android:layout_width="356dp"
            android:layout_height="478dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="@android:color/holo_orange_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPuzzleActivityMsg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cryptograms_what_do_you_want_to_do"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHomeCreatePuzzle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:onClick="handleClickHomeButtons"
                    android:text="@string/createcryptogram" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHomeChoosePuzzle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="handleClickHomeButtons"
                    android:text="@string/choose" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHomeUnsolvedPuzzles"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="handleClickHomeButtons"
                    android:text="@string/unsolvedcryptograms" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHomeCompletedPuzzles"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="handleClickHomeButtons"
                    android:text="@string/completed" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHomeStatistics"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="handleClickHomeButtons"
                    android:text="@string/statistics" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="handleClickHomeButtons"
                    android:text="@string/logout" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>