<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectCryptogramActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="356dp"
            android:layout_height="478dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblSelectPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Cryptogram to Solve"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="@android:color/holo_orange_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPuzzles"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/puzzles"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <Spinner
                    android:id="@+id/spinnerPuzzles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSelectPuzzle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:onClick="handleSelectPuzzleClick"
                    android:text="@string/attempt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblNewPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:text="@string/new_puzzle"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCreatePuzzle"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:onClick="handleSelectPuzzleClick"
                    android:text="@string/createcryptogram" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnViewPuzzleHomeMenu"
                    style="@android:style/Widget.Material.Light.Button.Inset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:onClick="handleSelectPuzzleClick"
                    android:text="Home Menu"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>